--- a/package.json
+++ b/package.json
@@ -20,7 +20,15 @@
     "@angular/platform-browser": "^15.0.4",
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
+    "@fortawesome/angular-fontawesome": "^0.12.0",
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.2",
     "ngx-hide-on-scroll": "^0.2.1",
     "popper.js": "^1.16.1",
